Исправлена конфигурация Vercel для правильной обработки статических файлов

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
       "dest": "/server.js"
     },
     {
+      "src": "/(.*\\.(html|css|js|png|jpg|jpeg|gif|svg|ico))",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/server.js"
     }
