feat: integrate RoyaleAPI proxy for Clash Royale API - Replace direct API calls with proxy server - Add comprehensive documentation - Update README with API setup instructions - Create quick setup guide - Fix IP whitelist issues

--- a/env.example
+++ b/env.example
@@ -1,4 +1,6 @@
 # Clash Royale API Configuration
+# Используем прокси-сервер RoyaleAPI для обхода ограничений IP
+# Создайте ключ на https://developer.clashroyale.com/ и добавьте IP 45.79.218.79 в whitelist
 CLASH_ROYALE_API_TOKEN=your_api_token_here
 
 # Server Configuration
